# dasQt

./: .gitignore  README.md  dasQt.yaml  main.py  pyproject.toml  requirements.txt  setup.py
CUT/: DataAnalize.ipynb  FK.ipynb  PSD.py  fkFilter.py  main copy.ipynb  plotDesktop.py  plotFK.py  plotFig.py  plotLable.py  plotPhysics.py  saveMat.py
IceQuake/: IceQuake.ipynb  LiaoHe.ipynb  Untitled-1.ipynb  mkData.py  mkData1.py  test.ipynb
dasQt/: Untitled-1.ipynb  __init__.py  das.py  dasQt.py  norm_trace.py
dasQt/CarClass/: curves_class.py  getPoints.py  showCarClass.py
dasQt/Cog/: cog.py  showCog.py
dasQt/CrossCorrelation/: DAS_modele_bak_2024_04_22.py  DAS_module_bak.py  dispersion.py  showDispersion.py
dasQt/Logging/: logPy.py  logPy1.py  logPy2.py  logPy3.py  logPy4.py  logging.conf  logging.yml
dasQt/YOLO/: best.pt  showYolo.py
dasQt/config/: dispersion.json
dasQt/filter/: Curvelet.py  bpFilter.py  bp_filter.py  fSpectrm.py  fdct_wrapping.py  filter.py  fkDip.py  main.py  showTrace.py  test_fkDip.py
dasQt/startGUIdat/: AnyConv.com__csimGPR_logo.icns
dasQt/utools/: config.py  dasStartGUI.py  readh5.py
doc/: dasQt-使用说明.md
tests/: test_bp_filter.py
try/: 00_ctypes_learn.py  00_pyqtgraph.py  QCheckBox.py  QClick.py  QClick1.py  QComboBox.py  QList.py  QList1.py  QList3.py  QPushButton.py  QTab.py  Untitled-1.ipynb  one.txt
try/cpp/: a.cpp  libA.dylib  libPy_arm64.dylib  libPy_x86_64.dylib
utools/: Radon.ipynb  car_ladong.m  logging.yml  norm_trace.m  test.m  test.py  test1.ipynb
utools/denoise/: bp_filter.m  fk_dip.m  main.m  qubo.m  (+4 more)
