[tool.poetry]
name = "dasQt"
version = "0.1.0"
description = "DAS data processing and visualization tool"
authors = ["Zhiyu Zhang <erbiaoger@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
pyqt6 = "^6.6.1"
h5py = "^3.10.0"
numba = "^0.59.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
obspy = "^1.4.0"
tqdm = "^4.66.2"
colorlog = "^6.8.2"
ipympl = "^0.9.3"
opencv-python = "^4.9.0.80"
tftb = "^0.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
notebook = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "python main.py"
